<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- login strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="login_ek3_string">LOGIN</string>
	<string name="usuario__string">Usuario:</string>
	<string name="contrase_a__string">Contrasea:</string>
	<string name="user_string">user</string>
	<string name="password_string">password</string>
	<string name="iniciar_sesion_string">INICIAR SESION</string>
</resources>